fix some typgrahy and layout issues

--- a/src/index.css
+++ b/src/index.css
@@ -1,19 +1,17 @@
 
+
 * {
-  font-family: 'Roboto, sans-serif';
+  font-family: 'Roboto', sans-serif;
+}
+
+
+h1, h2, h3, h4, h5, h6 {
+  text-align: 'center';
+  color: #212934;
+ 
 }
 
 p {
   line-height: 1.2;
+  color: #4A5768;
 }
-
-h1 {
-  color: #212934
-}
-
-body {
-  margin: 0;
-  padding: 0;
-
-}
-
