--- a/src/pages/Home/styles.module.css
+++ b/src/pages/Home/styles.module.css
@@ -1,4 +1,8 @@
-
+.container {
+    max-width: 1000px;
+    margin-left: auto;
+    margin-right: auto;
+}
 .footer {
     background-color: gray;
     padding: 6px
