--- a/src/parts/Header/styles.module.css
+++ b/src/parts/Header/styles.module.css
@@ -1,10 +1,10 @@
-.heroContent {
-    padding-top: 128px;
-    padding-bottom: 64px;
-    padding-left: 128px;
-    padding-right: 128px;
+.header {
+    padding-top: 64px; /* height of navbar */
+    height: 500px; 
+    display: flex;
+    align-items: center;
+ 
+
+
   }
 
-.title {
-    text-align: 'center';
-}
