--- a/src/styles.module.css
+++ b/src/styles.module.css
@@ -1,3 +1,8 @@
-.containerMain {
-    max-width: 50ch;
+.container {
+    padding-top: 8px;
+    padding-bottom: 8px;
+    max-width: 65ch;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 52px;
 }
